tests/NormalTests/paczka1/fuzzy1/46318548.err
Error in line 7: c0ÇF1C A545 76,0
Error in line 16: SbOcKKuXe S805 64,34
Error in line 20: c0GF1C S340 10,4
Error in line 31: aHvpU S805 188,21
Error in line 32: YuV4Co S94 0,6
Error in line 21: c0GF1C S94 10,3
